<resources>

    <string name="app_name">Make Habbits for Me</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_main">Make Habbits</string>
    <string name="title_activity_goal_editor">New Habbit</string>
    <string name="title_ongoing">Ongoing(%1$d)</string>
	<string name="title_won">Won(%1$d)</string>
	<string name="title_failed">Failed(%1$d)</string>
	<!-- 
	<string name="title_explore">Explore</string>
	 -->
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="habbit">Habbit:</string>
	<string name="duration">Duration(How long you plan to make it?):</string>
	<string name="habbitHint">like, jog 30 minutes on 7:30am</string>
	<string name="weeks">%1$d weeks</string>
	<string name="start_on">Start On:</string>
	<string name="next_week">Next Week</string>
	<string name="monday">Mo</string>
	<string name="tuesday">Tu</string>
	<string name="wednesday">We</string>
	<string name="thursday">Th</string>
	<string name="friday">Fr</string>
	<string name="saturday">Sa</string>
	<string name="sunday">Su</string>
	<string name="won_condition">Won Condition(Done Times / Total Times):</string>
	<string name="percentage">%1$d \%</string>
	<string name="auto_share">Auto Share On:</string>
	<string name="twitter">Twitter</string>
	<string name="facebook">Facebook</string>
	<string name="mustInputHint">Habit should be entered content</string>
	<string name="mustInputWeekHint">Week day should be selected one at least</string>
	<string name="saveSuccess">Saved successfully.</string>
	<string name="saveFailed">Failed to save.</string>
	<string name="repeatMode">Repeat On:</string>
	<string name="everyday">Everyday</string>
	<string name="days_of_week">Days of Every Week</string>
	<string name="no_data">No habbits here, try to create one by clicking on the plus button</string>
	<string name="done">Done</string>
	<string name="missed">Missed</string>
	<string name="goal_progress" formatted="false">Done: %1$s, Expected(>): %2$s, Total: %3$s</string>
	<string name="history">History</string>
	<string name="edit">Edit</string>
	<string name="restart">Start over</string>
	<string name="giveup">Give up</string>
	<string name="history_title">History of %1$s</string>
	<string name="doneAmount">Done Amount</string>
	<string name="missedAmount">Missed Amount</string>
	<string name="graph_name">Trend Graph of Amount of Done or Missed Habits</string>
	<string name="start_over_sucess">The goal was started over!</string>
	<string name="give_up_sucess">The goal was given up!</string>
	<string name="won_on">Won on: %1$s</string>
	<string name="failed_on">Failed on: %1$s</string>
	<string name="give_up_on">Given up on: %1$s</string>
	<string name="connect_twitter_failed">Failed to connect Twitter for: %1$s</string>
	<string name="connect_facebook_failed">Failed to connect Facebook for: %1$s</string>
	<string name="connect_twitter_success">Successfully connect Twitter!</string>
	<string name="connect_facebook_success">Successfully connect Facebook!</string>
	<string name="auth_warning">Share will be disabled without your authorization!</string>
	<string name="share_done_content">On %2$s, I\'ve done the goal: %1$s -by @habits4me</string>
	<string name="share_missed_content">On %2$s, I\'ve missed the goal: %1$s -by @habits4me</string>
	<string name="share_won_content">On %2$s, I\'ve WON to make the habit: %1$s -by @habits4me</string>
	<string name="share_failed_content">On %2$s, I\'ve FAILED to make the habit: %1$s -by @habits4me</string>
	<string name="share_giveup_content">On %2$s, I\'ve GIVEN UP the habit: %1$s -by @habits4me</string>
	<string name="confirm_title">Confirm to set social feature</string>
	<string name="confirm_set_fb">Your habit has been set SHARE to Facebook, but not connect it yet. Do you want to set it up now?</string>
	<string name="confirm_set_tw">Your habit has been set SHARE to Twitter, but not connect it yet. Do you want to set it up now?</string>
	<string name="confirm_startover_title">Confirm to start over</string>
	<string name="confirm_giveup_title">Confirm to give up</string>
	<string name="confirm_startover_content">To start over a habit will cause remove all of history records of this haibt.\n Are you sure to do it?</string>
	<string name="confirm_giveup_content">To give up a habit means let it failed immediately.\n Are you sure?</string>
	<string name="notify_check_goal_result">You have a goal to check result for now.</string>
	<string name="notify_goal_name_title">Habit: %1$s</string>
	<string name="notify_goal_check_alarm">Did you finish the goal? If so, check the result box for this habit.</string>
	<string name="set_alarm_title">To reminder you check your goal\'s result:</string>
	<string name="set_alarm">Alarm On</string>
	<string name="alarm_time_not_set">Time Not Set</string>
	<string name="alarm_time_set">Time: %1$s</string>
	<string name="alarm">Alarm</string>
</resources>