<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="15dip"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:background="@drawable/ll_border"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/blankImg"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:src="@android:color/transparent" />

            <ImageView
                android:id="@+id/progressImg"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_margin="4dip"
                android:layout_weight="0.1"
                android:src="@color/green_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/goalNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/progressTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal_progress"
                android:textColor="@color/text_unselected"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/doneDateTxt"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:singleLine="false"
             />

        <ToggleButton
            android:id="@+id/goalResultTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/selector_button_check"
            android:textColor="@drawable/selector_text_color"
            android:textOff="@string/missed"
            android:textOn="@string/done"
            android:textSize="18sp" 
            android:focusable="false"
            android:paddingLeft="10dip"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/historyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/history"
            android:textColor="@color/text_light_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:text="@string/edit"
            android:textColor="@color/text_light_blue" 
            android:textSize="14sp"/>
        
        <ToggleButton
            android:id="@+id/alarmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/alarm_button_check"
            android:textColor="@drawable/selector_text_color"
            android:textOff="@string/alarm"
            android:textOn=""
            android:textSize="14sp" 
            android:focusable="false"
            android:layout_marginRight="10dip"/>

        <TextView
            android:id="@+id/restartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:text="@string/restart"
            android:textColor="@color/text_light_blue" 
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/giveupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:text="@string/giveup"
            android:textColor="@color/text_light_blue"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>